# choice-sherpa

./: .gitignore  CLAUDE.md  DEV-ROADMAP.md  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260109000000_create_extensions.sql  20260109000001_create_outbox.sql  20260109000002_create_memberships.sql  20260109000003_create_cycles.sql  20260110000000_create_atomic_decision_tools.sql  20260110000000_create_promo_codes.sql  20260110000001_create_decision_documents.sql  20260111000000_create_conversations.sql  20260111000001_create_sessions.sql  20260111000002_create_conversations.sql  20260111000003_add_schema_version_to_outbox.sql  20260111000004_create_decision_profiles.sql
backend/src/: lib.rs  main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/ai/: anthropic_provider.rs  failover_provider.rs  in_memory_usage_tracker.rs  mock_provider.rs  mod.rs  openai_provider.rs  usage_handler.rs
backend/src/adapters/auth/: mock.rs  mod.rs  zitadel.rs
backend/src/adapters/document/: local_file_storage.rs  markdown_parser.rs  mod.rs  pulldown_export_service.rs  template_generator.rs
backend/src/adapters/events/: idempotent_handler.rs  in_memory.rs  mod.rs  outbox_publisher.rs
backend/src/adapters/http/: mod.rs
backend/src/adapters/membership/: mod.rs  stub_access_checker.rs
backend/src/adapters/postgres/: access_checker_impl.rs  conversation_reader.rs  conversation_repository.rs  cycle_reader.rs  cycle_repository.rs  dashboard_reader.rs  document_reader.rs  document_repository.rs  membership_reader.rs  membership_repository.rs  mod.rs  session_reader.rs  session_repository.rs
backend/src/adapters/profile/: TODO.md  filesystem.rs  llm_analyzer.rs  mod.rs  postgres_reader.rs  postgres_repository.rs
backend/src/adapters/rate_limiter/: config.rs  in_memory.rs  mod.rs  redis.rs
backend/src/adapters/storage/: file_state_storage.rs  in_memory_state_storage.rs  mod.rs
backend/src/adapters/stripe/: mock_payment_provider.rs  mod.rs  stripe_adapter.rs  webhook_types.rs
backend/src/adapters/validation/: json_schema_validator.rs  mod.rs
backend/src/adapters/websocket/: event_bridge.rs  handler.rs  messages.rs  mod.rs  rooms.rs
backend/src/application/: mod.rs
backend/src/application/handlers/: mod.rs  stream_message.rs
backend/src/config/: ai.rs  auth.rs  database.rs  email.rs  error.rs  features.rs  mod.rs  payment.rs  redis.rs  server.rs
backend/src/domain/: mod.rs
backend/src/domain/ai_engine/: conversation_state.rs  errors.rs  mod.rs  orchestrator.rs  services.rs  step_agent.rs  values.rs
backend/src/ports/: access_checker.rs  ai_engine.rs  ai_provider.rs  auth_provider.rs  circuit_breaker.rs  confirmation_request_repository.rs  connection_registry.rs  conversation_reader.rs  conversation_repository.rs  cycle_reader.rs  cycle_repository.rs  dashboard_reader.rs  decision_document_reader.rs  decision_document_repository.rs  document_export_service.rs  document_file_storage.rs  document_generator.rs  document_parser.rs  event_publisher.rs  event_subscriber.rs  membership_reader.rs  membership_repository.rs  mod.rs  outbox_writer.rs  payment_provider.rs  processed_event_store.rs  profile_analyzer.rs  profile_file_storage.rs  profile_reader.rs  profile_repository.rs  promo_code_validator.rs  rate_limiter.rs  revisit_suggestion_repository.rs  schema_validator.rs  session_reader.rs  session_repository.rs  session_validator.rs  state_storage.rs  step_agent.rs  tool_executor.rs  (+3 more)
backend/tests/: outbox_integration.rs  profile_http_integration.rs
(+470 files in other folders)
