[package]
name = "choice-sherpa"
version = "0.1.0"
edition = "2021"
authors = ["Choice Sherpa Team"]
description = "Interactive decision support application using the PrOACT framework"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Lazy statics
once_cell = "1.17"

# Async runtime (for future use)
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
# Testing - pinned for Rust 1.72 compatibility
proptest = "1.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "choice-sherpa"
path = "src/main.rs"
